# ctf

./: README.md
2020/ctf-09-18-2020/networking-nc_complex_hello/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prompt.md  solution.py
2020/ctf-09-18-2020/networking-nc_complex_hello/src/: lib.rs  main.rs
2020/ctf-09-18-2020/networking-nc_complex_hello/src/config/: errors.rs  mod.rs
2020/ctf-09-18-2020/networking-nc_complex_hello/src/env/: mod.rs
2020/ctf-10-02-2020/web-to_jwt_or_not_to_jwt/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prompt.md
2020/ctf-10-02-2020/web-to_jwt_or_not_to_jwt/src/: api.rs  jwt.rs  lib.rs  main.rs
2020/ctf-10-02-2020/web-to_jwt_or_not_to_jwt/src/env/: environment_parse_error.rs  mod.rs  var_error_wrapper.rs
2020/ctf-10-02-2020/web-to_jwt_or_not_to_jwt/www/: flag.html  index.html
2020/ctf-10-02-2020/web-to_jwt_or_not_to_jwt/www/css/: styles.css
2020/ctf-10-02-2020/web-to_jwt_or_not_to_jwt/www/js/: flag.js  index.js  lib.js
2020/ctf-10-16-2020/crypto-real-signature-algorithm/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prompt.md  rustfmt.toml  solution.py
2020/ctf-10-16-2020/crypto-real-signature-algorithm/src/: lib.rs  main.rs
2020/ctf-10-16-2020/crypto-real-signature-algorithm/src/config/: errors.rs  mod.rs
2020/ctf-10-16-2020/crypto-real-signature-algorithm/src/env/: var_error_wrapper.rs
2024/spring/utctf/web-unsound/wasm/: Cargo.toml
2024/spring/utctf/web-unsound/wasm/html/: exploit.html  exploit.txt  index.html
2024/spring/utctf/web-unsound/wasm/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
ctf-02-14-2018/doc-steg/: [Content_Types].xml  challenge.docx
ctf-02-14-2018/forensics-wireshark/: flag.txt  problem.txt
ctf-02-14-2018/misc-befunge/: isss.pem  problem.txt
ctf-02-28-2018/crib/: ciphertext.txt  flag.txt  problem.txt
ctf-02-28-2018/deadfish-1/: flag.txt  problem.txt
ctf-02-28-2018/deadfish-2/: flag.txt
ctf-security-day-2018/: points.txt
(+1828 files in other folders)
