[package]
name = "nc_complex_hello"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["tcp", "rt-threaded", "macros", "io-util", "time"] }
sodiumoxide = "0.2"
lazy_static = "1.4"

[profile.release]
lto = true
