[package]
name = "to_jwt_or_not_to_jwt"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json", "serve"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sodiumoxide = "0.2.6"
base64 = "0.12.3"

[profile.release]
lto = true
