[package]
name = "real_signature_algorithm"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["tcp", "rt-threaded", "macros", "io-util", "time"] }
lazy_static = "1.4"
ramp-primes = "0.4.1"
ramp = "0.5.9"

[profile.release]
lto = true
