[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.21.7"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.0" }
wasm-bindgen = "0.2.91"
